@@ -45,4 +45,7 @@ PyObject* PyObjCObject_GetAttrString(PyObject* object, char* key);
 PyObject* PyObjCObject_NewTransient(id objc_object, int* cookie);
 void PyObjCObject_ReleaseTransient(PyObject* proxy, int cookie);
 
+PyObject* PyObjC_get_c_void_p(void);
+
+
 #endif /* PyObjC_OBJC_OBJECT_H */
